ghc-4335c07/testsuite/tests/typecheck/should_fail/CustomTypeErrors04.stderr

CustomTypeErrors04.hs:14:14: error:
    • ERROR
    • In the expression: ()
      In an equation for ‘testNOTOK1’: testNOTOK1 = ()
